--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,5 +21,4 @@ upload:
     TERRAFORM_MODULE_SYSTEM: google
   stage: upload
   rules:
-    - if: $CI_COMMIT_TAG
-
+    - if: $CI_COMMIT_REF == 'mainline'
