--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,4 +21,4 @@ upload:
     TERRAFORM_MODULE_SYSTEM: google
   stage: upload
   rules:
-    - if: $CI_COMMIT_REF_NAME == 'mainline'
+    - if: $CI_COMMIT_TAG
