Corrected CI pipeline

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@
     TERRAFORM_MODULE_VERSION: ${CI_COMMIT_TAG}
   script:
   - export TERRAFORM_MODULE_DIR="${CI_PROJECT_DIR}/providers/{TERRAFORM_MODULE_SYSTEM}"
-  - cd providers/${TERRAFORM_MODULE_SYSTEM}
+  - echo "Packaging ${TERRAFORM_MODULE_DIR}"
   - tar -cvzf ${TERRAFORM_MODULE_NAME}-${TERRAFORM_MODULE_SYSTEM}-${TERRAFORM_MODULE_VERSION}.tgz -C ${TERRAFORM_MODULE_DIR} --exclude=./.git .
   - 'curl --header "JOB-TOKEN: ${CI_JOB_TOKEN}" --upload-file ${TERRAFORM_MODULE_NAME}-${TERRAFORM_MODULE_SYSTEM}-${TERRAFORM_MODULE_VERSION}.tgz ${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/terraform/modules/${TERRAFORM_MODULE_NAME}/${TERRAFORM_MODULE_SYSTEM}/${TERRAFORM_MODULE_VERSION}/file'
 
